--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muthu-portfolio",
+  "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "framer-motion": "^12.6.3",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
+    "pdfjs-dist": "^3.11.174",
+    "plausible-tracker": "^0.3.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.1.2",
+    "react-intersection-observer": "^9.8.1",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
